--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -68,7 +68,7 @@
 
             <div class="card-body text-center">
               <a href=" {% static '' %}" class="grey-text">
-                <h5>{{item.category}}</h5>
+                <h5>{{item.get_category_display}}</h5>
               </a>
               <h5>
                 <strong>
