--- a/templates/checkout-page.html
+++ b/templates/checkout-page.html
@@ -10,7 +10,7 @@
     <div class="container wow fadeIn">
 
       <!-- Heading -->
-      <h2 class="my-5 h2 text-center">Checkout form</h2>
+      <h2 class="my-5 h2 text-center">Envío a </h2>
 
       <!--Grid row-->
       <div class="row">
@@ -21,22 +21,28 @@
           <!--Card-->
           <div class="card">
             <!--Card content-->
-            <form method="POST" class="card-body">
+            <form id="form-check" method="POST" class="card-body">
 
               {% csrf_token %}
 
               <!--address-->
-              <div class="md-form mb-5">
+              <div class="md-form mb-8">
                 <!-- <input type="text" id="address" class="form-control" placeholder="1234 Main St"> -->
                 {{form.street_address}}
-                <label for="address" class="">Address</label>
+                <label for="address" class="">Direccion</label>
               </div>
 
               <!--address-2-->
               <div class="md-form mb-5">
                 <!-- <input type="text" id="address-2" class="form-control" placeholder="Apartment or suite"> -->
-                {{form.apartment_address}}
-                <label for="address-2" class="">Address 2 (optional)</label>
+                {{form.suburb}}
+                <label for="address-2" class=""> Colonia </label>
+              </div>
+
+              <div class="md-form mb-3">
+                <!-- <input type="text" id="address-2" class="form-control" placeholder="Apartment or suite"> -->
+                {{form.phone_number}}
+                <label for="phone_number" class=""> Número teléfonico </label>
               </div>
 
               <!--Grid row-->
@@ -45,7 +51,7 @@
                 <!--Grid column-->
                 <div class="col-lg-4 col-md-12 mb-4">
 
-                  <label for="country">Country</label>
+                  <label for="country">País</label>
                   <!-- <select class="custom-select d-block w-100" id="country" required>
                     <option value="">Choose...</option>
                     <option>United States</option>
@@ -63,7 +69,7 @@
                 <!--Grid column-->
                 <div class="col-lg-4 col-md-6 mb-4">
 
-                  <label for="zip">Zip</label>
+                  <label for="zip">Código postal</label>
                   <!-- <input type="text" class="form-control" id="zip" placeholder="" required> -->
                   {{form.zip}}
                   <div class="invalid-feedback">
@@ -80,11 +86,11 @@
 
               <div class="custom-control custom-checkbox">
                 <input {% if form.same_billing_address.value %} checked {% endif %} name="same_billing_adress" type="checkbox" class="custom-control-input" id="same-address">
-                <label class="custom-control-label" for="same-address">Shipping address is the same as my billing address</label>
+                <label class="custom-control-label" for="same-address">La dirección de envío es la misma que la de facturación</label>
               </div>
               <div class="custom-control custom-checkbox">
                 <input {% if form.save_info.value %} checked {% endif %} name="save_info" type="checkbox" class="custom-control-input" id="save-info">
-                <label class="custom-control-label" for="save-info">Save this information for next time</label>
+                <label class="custom-control-label" for="save-info">Guardar la información para la siguiente compra</label>
               </div>
 
               <hr>
@@ -176,4 +182,8 @@
   </main>
   <!--Main layout-->
 
+  {% endblock %}
+
+  {% block extra_scripts %}
+  
   {% endblock %}
