--- a/templates/order_summary.html
+++ b/templates/order_summary.html
@@ -61,7 +61,16 @@
                     </td>
                 </tr>
 
+
                 {% endfor %}
+
+                {% if object.coupon %}
+                    <tr>
+                        <td colspan="4">Cupon</td>
+                        <td><b>-${{object.coupon.amount}}</b></td>
+                    </tr>
+                {% endif %}
+
                     <tr>
                         <td colspan="4">Total del carrito</td>
                         <td colspan="5">
