--- a/static_in_env/css/style.css
+++ b/static_in_env/css/style.css
@@ -13,6 +13,11 @@ body,
     .carousel .carousel-inner .active {
       height: 100%; }
 
+.card-image img {
+    width: 300px;
+    height: 300px;
+}
+
 /* Adjustment for mobile devices*/
 @media (max-width: 776px) {
   .carousel {
