--- a/templates/checkout-page.html
+++ b/templates/checkout-page.html
@@ -25,75 +25,124 @@
 
               {% csrf_token %}
 
-              <!--address-->
-              <div class="md-form mb-8">
-                <!-- <input type="text" id="address" class="form-control" placeholder="1234 Main St"> -->
-                {{form.street_address}}
-                <label for="address" class="">Direccion</label>
-              </div>
 
-              <!--address-2-->
-              <div class="md-form mb-5">
-                <!-- <input type="text" id="address-2" class="form-control" placeholder="Apartment or suite"> -->
-                {{form.suburb}}
-                <label for="address-2" class=""> Colonia </label>
-              </div>
-
-              <div class="md-form mb-3">
-                <!-- <input type="text" id="address-2" class="form-control" placeholder="Apartment or suite"> -->
-                {{form.phone_number}}
-                <label for="phone_number" class=""> Número teléfonico </label>
-              </div>
-
-              <!--Grid row-->
-              <div class="row">
-
-                <!--Grid column-->
-                <div class="col-lg-4 col-md-12 mb-4">
-
-                  <label for="country">País</label>
-                  <!-- <select class="custom-select d-block w-100" id="country" required>
-                    <option value="">Choose...</option>
-                    <option>United States</option>
-                  </select> -->
-
-                  {{form.country}}
-
-                  <div class="invalid-feedback">
-                    Please select a valid country.
+              <div class="hideable_shipping_form">
+                <h3>Direccion de envio</h3>
+                  <div class="md-form mb-8">
+                    <input type="text" placeholder="Av Benito Juarez #23" id="shipping_address" name="shipping_address" class="form-control" />
+                    <label for="shipping_address" class="">Direccion</label>
                   </div>
 
-                </div>
-                <!--Grid column-->
-
-                <!--Grid column-->
-                <div class="col-lg-4 col-md-6 mb-4">
-
-                  <label for="zip">Código postal</label>
-                  <!-- <input type="text" class="form-control" id="zip" placeholder="" required> -->
-                  {{form.zip}}
-                  <div class="invalid-feedback">
-                    Zip code required.
+                  <div class="md-form mb-5">
+                       <input type="text" placeholder="Colonia Revolucion" id="suburb_shipping" name="suburb_shipping" class="form-control" />
+                    <label for="suburb_shipping" class=""> Colonia </label>
                   </div>
 
+                  <div class="md-form mb-3">
+                    <input type="text" placeholder="3323232342" id="shipping_phone_number" name="shipping_phone_number" class="form-control" />
+                    <label for="shipping_phone_number" class=""> Número teléfonico </label>
+                  </div>
+
+                  <div class="row">
+
+                      <div class="col-lg-4 col-md-12 mb-4">
+                        <label for="country">País</label>
+                        {{form.shipping_country}}
+                      <div class="invalid-feedback">
+                        Please select a valid country.
+                      </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 mb-4">
+                      <label for="zip">Código postal</label>
+                      <input type="text" placeholder="Colonia Revolucion" id="shipping_zip" name="shipping_zip" class="form-control" />
+                      <div class="invalid-feedback">
+                        Zip code required.
+                      </div>
+                    </div>
+
+                  </div>
+
+
+                <div class="custom-control custom-checkbox">
+                  <input name="same_billing_address" type="checkbox" class="custom-control-input" id="same_billing_address">
+                  <label class="custom-control-label" for="same_billing_address">La dirección de facturación es la misma que la de envio </label>
                 </div>
-                <!--Grid column-->
+                <div class="custom-control custom-checkbox">
+                  <input name="set_default_shipping" type="checkbox" class="custom-control-input" id="set_default_shipping">
+                  <label class="custom-control-label" for="set_default_shipping">Guardar como la dirección por defecto</label>
+                </div>
 
               </div>
-              <!--Grid row-->
+
+              {% if default_shipping_address %}
+
+              <div class="custom-control custom-checkbox">
+                <input name="use_default_shipping" type="checkbox" class="custom-control-input" id="use_default_shipping">
+                <label class="custom-control-label" for="use_default_shipping">{{default_shipping_address.street_address|truncatechars:10}}</label>
+              </div>
+
+              {% endif %}
 
               <hr>
 
-              <div class="custom-control custom-checkbox">
-                <input {% if form.same_billing_address.value %} checked {% endif %} name="same_billing_adress" type="checkbox" class="custom-control-input" id="same-address">
-                <label class="custom-control-label" for="same-address">La dirección de envío es la misma que la de facturación</label>
+
+
+              <div class="hideable_billing_form">
+                <h3>Direccion de facturación</h3>
+                <div class="md-form mb-8">
+                  <input type="text" placeholder="Av Benito Juarez #23" id="billing_address" name="billing_address" class="form-control" />
+                  <label for="billing_address" class="">Direccion</label>
+                </div>
+
+                <div class="md-form mb-5">
+                  <input type="text" placeholder="Colonia Revolucion" id="suburb_billing" name="suburb_billing" class="form-control" />
+                  <label for="suburb_billing" class=""> Colonia </label>
+                </div>
+
+                <div class="md-form mb-3">
+                  <input type="text" placeholder="3323232342" id="billing_phone_number" name="billing_phone_number" class="form-control" />
+                  <label for="billing_phone_number" class=""> Número teléfonico </label>
+                </div>
+
+                <div class="row">
+
+                    <div class="col-lg-4 col-md-12 mb-4">
+                      <label for="billing_country">País</label>
+                      {{form.billing_country}}
+                    <div class="invalid-feedback">
+                      Please select a valid country.
+                    </div>
+                  </div>
+
+                  <div class="col-lg-4 col-md-6 mb-4">
+                    <label for="billing_zip">Código postal</label>
+                    <input type="text" placeholder="Colonia Revolucion" id="billing_zip" name="billing_zip" class="form-control" />
+                    <div class="invalid-feedback">
+                      Zip code required.
+                    </div>
+                  </div>
+
+                </div>
+
+
+                <div class="custom-control custom-checkbox">
+                  <input name="set_default_billing" type="checkbox" class="custom-control-input" id="set_default_billing">
+                  <label class="custom-control-label" for="set_default_billing">Guardar como la dirección de facturacion por defecto</label>
+                </div>
               </div>
+          
+              {% if default_billing_address %}
+
               <div class="custom-control custom-checkbox">
-                <input {% if form.save_info.value %} checked {% endif %} name="save_info" type="checkbox" class="custom-control-input" id="save-info">
-                <label class="custom-control-label" for="save-info">Guardar la información para la siguiente compra</label>
+                <input name="use_default_billing" type="checkbox" class="custom-control-input" id="use_default_billing">
+                <label class="custom-control-label" for="use_default_billing">{{default_billing_address.street_address|truncatechars:10}}</label>
               </div>
 
-              <hr>
+              {% endif %}
+
+
+              <h3>Opciones de pago</h3>
 
               <div class="d-block my-3">
                 {% for value, name in form.fields.payment_option.choices %}
@@ -131,5 +180,28 @@
   {% endblock %}
 
   {% block extra_scripts %}
-  
+  <script>
+    var hideable_shipping_form = $('.hideable_shipping_form');
+    var hideable_billing_form = $('.hideable_billing_form');
+    
+    var use_default_shipping = document.querySelector("input[name=use_default_shipping]");
+    var use_default_billing = document.querySelector("input[name=use_default_billing]");
+    
+    use_default_shipping.addEventListener('change', function() {
+      if (this.checked) {
+        hideable_shipping_form.hide();
+      } else {
+        hideable_shipping_form.show();
+      }
+    })
+    
+    use_default_billing.addEventListener('change', function() {
+      if (this.checked) {
+        hideable_billing_form.hide();
+      } else {
+        hideable_billing_form.show();
+      }
+    })    
+
+    </script>
   {% endblock %}
