--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -60,7 +60,7 @@
             <div class="view overlay">
               <!-- <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg" class="card-img-top"#} -->
 
-              <img src="{{item.image.url}}" class="card-image-top">
+              <img height="100%" width="100% " src="{{item.image.url}}" class="card-image">
               <a href="{{item.get_absolute_url}}" >
                 <div class="mask rgba-white-slight"></div>
               </a>
