--- a/templates/base.html
+++ b/templates/base.html
@@ -1,16 +1,18 @@
 {% load static %}
 {% load cart_template_cart %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block head_title %}{% endblock %}</title>
+    <title>{% block head_title %}PatyShop{% endblock %}</title>
     {% block extra_head %}
     {% endblock %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <script src="https://www.paypal.com/sdk/js?client-id=AbJ7sP6q4PURgOfxYTrq-e8mBWYyiVaVdd-c-SXXkxND0Uq-PgItJzdJEfI_o6tx-dLwfQKbv1klSR34" ></script>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <!-- Bootstrap core CSS -->
@@ -19,6 +21,8 @@
     <link href=" {% static 'css/mdb.min.css' %}" rel="stylesheet">
     <!-- Your custom styles (optional) -->
     <link href=" {% static 'css/style.min.css' %}" rel="stylesheet">
+
+    <link href="{% static 'css/style.css' %}" rel="stylesheet" />
     <style type="text/css">
       html,
       body,
@@ -69,36 +73,50 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
         <!-- Left -->
-        <ul class="navbar-nav mr-auto">
-      
+        <ul class="left">
+          <li>
+            <a class="nav-link waves-effect active" href="/items/?filter=P">Primaverales</a>
+          </li>
+          <li>
+            <a class="nav-link waves-effect active" href="/items/?filter=I">Invernales</a>
+          </li>
+          <li>
+            <a class="nav-link waves-effect active" href="/search">Búsqueda</a>
+          </li>
+          {% if request.user.is_authenticated %} 
+          <li>
+            <a class="nav-link waves-effect active" href="/myorders">Ordenes</a>
+          </li>
+          {% endif %}
+
         </ul>
 
         <!-- Right -->
-        <ul class="navbar-nav nav-flex-icons">
+        <ul class="right">
           {% if request.user.is_authenticated %} 
-            <li class="nav-item">
+            <li>
               <a class="nav-link waves-effect" href="{% url 'core:order-summary' %}">
                 <span class="badge red z-depth-1 mr-1"> {{request.user|cart_item_count}} </span>
                 <i class="fas fa-shopping-cart"></i>
-                <span class="clearfix d-none d-sm-inline-block"> Carrito de compras </span>
+                <span> Carrito de compras </span>
               </a>
             </li>
 
-            <li class="nav-item">
+            <li>
               <a class="nav-link waves-effect" href="{% url 'account_logout' %}">
-                <span class="clearfix d-none d-sm-inline-block"> Cerrar sesión </span>
+                <span> Cerrar sesión </span>
               </a>
             </li>
           {% else %}
-            <li class="nav-item">
+            <li>
               <a class="nav-link waves-effect" href="{% url 'account_login' %}">
-                <span class="clearfix d-none d-sm-inline-block"> Iniciar sesión </span>
+                <span> Iniciar sesión </span>
               </a>
             </li>
 
-            <li class="nav-item">
+            <li>
               <a class="nav-link waves-effect" href="{% url 'account_signup' %}">
-                <span class="clearfix d-none d-sm-inline-block"> Registrate </span>
+                <span> Registrate </span>
               </a>
             </li>
           {% endif %}
@@ -123,7 +141,7 @@
     {% endif %}
     </div>
 
-    <div id="content">
+    <div id="content" style="min-height: 79vh;">
         {% block content %}{% endblock %}
         {% block extra_body %}{% endblock %}
     </div>
@@ -134,44 +152,6 @@
   <!--Footer-->
   <footer class="page-footer text-center font-small mt-4 wow fadeIn">
 
-
-    <hr class="my-4">
-
-    <!-- Social icons -->
-    <div class="pb-4">
-      <a href="https://www.facebook.com/mdbootstrap" target="_blank">
-        <i class="fab fa-facebook-f mr-3"></i>
-      </a>
-
-      <a href="}https://twitter.com/MDBootstrap" target="_blank">
-        <i class="fab fa-twitter mr-3"></i>
-      </a>
-
-      <a href="https://www.youtube.com/watch?v=7MUISDJ5ZZ4" target="_blank">
-        <i class="fab fa-youtube mr-3"></i>
-      </a>
-
-      <a href="https://plus.google.com/u/0/b/107863090883699620484" target="_blank">
-        <i class="fab fa-google-plus-g mr-3"></i>
-      </a>
-
-      <a href="https://dribbble.com/mdbootstrap" target="_blank">
-        <i class="fab fa-dribbble mr-3"></i>
-      </a>
-
-      <a href="https://pinterest.com/mdbootstrap" target="_blank">
-        <i class="fab fa-pinterest mr-3"></i>
-      </a>
-
-      <a href="https://github.com/mdbootstrap/bootstrap-material-design" target="_blank">
-        <i class="fab fa-github mr-3"></i>
-      </a>
-
-      <a href="http://codepen.io/mdbootstrap/" target="_blank">
-        <i class="fab fa-codepen mr-3"></i>
-      </a>
-    </div>
-    <!-- Social icons -->
 
     <!--Copyright-->
     <div class="footer-copyright py-3">
@@ -198,6 +178,8 @@
         new WOW().init();
 
     </script>
+
+    
 
   {% block extra_scripts %}
   {% endblock extra_scripts %}
