--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -6,45 +6,11 @@
 
 
 <!--Main layout-->
-<main>
+<main style="height:80vh; justify-content: center; align-content: center; align-items: center; flex-flow: column; display: flex;">
   <div class="container">
 
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark mdb-color lighten-3 mt-3 mb-5">
-
-      <!-- Navbar brand -->
-      <span class="navbar-brand">Categorias:</span>
-
-      <!-- Collapse button -->
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
-        aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <!-- Collapsible content -->
-      <div class="collapse navbar-collapse" id="basicExampleNav">
-
-        <!-- Links -->
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Bikinis primaverales</a>
-          </li>
-          <li>
-            <a class="nav-link" href="#">Bikinis primaverales</a>
-          </li>
-
-        </ul>
-        <!-- Links -->
-
-        <form class="form-inline">
-          <div class="md-form my-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          </div>
-        </form>
-      </div>
-      <!-- Collapsible content -->
-
-    </nav>
+  
     <!--/.Navbar-->
 
     <!--Section: Products v.3-->
@@ -52,50 +18,52 @@
 
       <div class="row wow fadeIn">
         {% for item in object_list %}
-        <div class="col-lg-3 col-md-6 mb-4">
+        {% if item.stock > 0 %}
+          <div class="col-lg-3 col-md-6 mb-4">
 
-          <div class="card">
+            <div class="card">
 
-            <!--Card image-->
-            <div class="view overlay">
-              <!-- <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg" class="card-img-top"#} -->
+              <!--Card image-->
+              <div class="view overlay">
+                <!-- <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg" class="card-img-top"#} -->
 
-              <img height="100%" width="100% " src="{{item.image.url}}" class="card-image">
-              <a href="{{item.get_absolute_url}}" >
-                <div class="mask rgba-white-slight"></div>
-              </a>
+                <img height="100%" width="100% " src="{{item.image.url}}" class="card-image">
+                <a href="{{item.get_absolute_url}}" >
+                  <div class="mask rgba-white-slight"></div>
+                </a>
+              </div>
+              <!--Card image-->
+
+              <div class="card-body text-center">
+                <a class="grey-text">
+                  <h5>{{item.get_category_display}}</h5>
+                </a>
+                <h5>
+                  <strong>
+                    <a href="{{item.get_absolute_url}}" class="dark-grey-text">{{item.title}}
+                      <span class="badge badge-pill danger-color">{{item.label}}</span>
+                    </a>
+                  </strong>
+                </h5>
+
+                <h4 class="font-weight-bold blue-text">
+                  <strong>
+                    {% if item.discount_price %}
+                      ${{item.discount_price}}
+                    {% else %}
+                      ${{item.price}}
+                    {% endif %}
+                  </strong>
+                </h4>
+
+              </div>
+              <!--Card content-->
+
             </div>
-            <!--Card image-->
-
-            <div class="card-body text-center">
-              <a href=" {% static '' %}" class="grey-text">
-                <h5>{{item.get_category_display}}</h5>
-              </a>
-              <h5>
-                <strong>
-                  <a href="{{item.get_absolute_url}}" class="dark-grey-text">{{item.title}}
-                    <span class="badge badge-pill danger-color">{{item.label}}</span>
-                  </a>
-                </strong>
-              </h5>
-
-              <h4 class="font-weight-bold blue-text">
-                <strong>
-                  {% if item.discount_price %}
-                    {{item.discount_price}}
-                  {% else %}
-                    {{item.price}}
-                  {% endif %}
-                </strong>
-              </h4>
-
-            </div>
-            <!--Card content-->
+            <!--Card-->
 
           </div>
-          <!--Card-->
-
-        </div>
+        {%endif%}
         {% endfor %}
         <!--Grid column-->
 
