--- a/templates/order_snippet.html
+++ b/templates/order_snippet.html
@@ -13,19 +13,13 @@
         <span class="text-muted">${{ order_item.get_final_price }}</span>
     </li>
     {% endfor %}
-    {% if order.coupon %}
-    <li class="list-group-item d-flex justify-content-between bg-light">
-        <div class="text-success">
-        <h6 class="my-0">Promo code</h6>
-        <small>{{ order.coupon.code }}</small>
-        </div>
-        <span class="text-success">-${{ order.coupon.amount }}</span>
-    </li>
-    {% endif %}
     <li class="list-group-item d-flex justify-content-between">
-        <span>Total (MXN)</span>
-        <strong>${{ order.get_total }}</strong>
+        <span id="precio">${{ order.get_total}}</span>
     </li>
-
+    <li class="list-group-item d-flex justify-content-between">
+        <row style="display: flex; justify-content: flex-end; width: 100%;">
+            <h4><strong id="precio-final"></strong></h4>
+        </row>
+    </li>
 
   </div>
