--- a/templates/payment.html
+++ b/templates/payment.html
@@ -160,12 +160,15 @@ button:hover {
         </div>
 
 
-          
      
-
-        {% include "order_snippet.html" %}
-
       </div>
+
+      <div class="row justify-content-center">
+        <div class="col-md-12">
+            <h3 style="text-align: center;">Total (MXN) {{order.get_total|add:order.sent_price}}</h3>
+        </div>
+      </div>
+
 
     </div>
   </main>
