--- a/templates/payment.html
+++ b/templates/payment.html
@@ -165,7 +165,7 @@ button:hover {
 
       <div class="row justify-content-center">
         <div class="col-md-12">
-            <h3 style="text-align: center;">Total (MXN) {{order.get_total|add:order.sent_price}}</h3>
+            <h3 style="text-align: center;">Total (MXN) ${{order.get_total|add:order.sent_price}}</h3>
         </div>
       </div>
 
