--- a/templates/base.html
+++ b/templates/base.html
@@ -156,7 +156,7 @@
     <!--Copyright-->
     <div class="footer-copyright py-3">
       © 2020 Copyright:
-      <a href="https://mdbootstrap.com/education/bootstrap/" target="_blank"> PatyShop</a>
+      <a href="https://www.ardants.com" target="_blank">Ardants</a>
     </div>
     <!--/.Copyright-->
 
