--- a/templates/order_summary.html
+++ b/templates/order_summary.html
@@ -73,14 +73,15 @@
                     </tr>
                     <tr>
                         <td colspan="5">
-       
-                            <a class="btn btn-warning float-right ml-2" href="/checkout/">
-                                Comprar
-                            </a>
+                            <div style="display: flex; justify-content: center; align-content: center; align-items: center;" >
+                                <a style="margin: 10px;" class="btn btn-warning float-right ml-2" href="/checkout/">
+                                    Comprar
+                                </a>
 
-                            <a class="btn btn-primary float-right" href="/">
-                                Continuar comprando
-                            </a>
+                                <a style="margin: 10px;" class="btn btn-primary float-right" href="/">
+                                    Continuar comprando
+                                </a>
+                            </div>
                         </td>
                     </tr>
               </tbody>
