--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -13,8 +13,8 @@
   <div class="container">
 
     <section class="mb-4">
-      <div class="row wow fadeIn">
-        <div class="col-md-6 offset-3">
+      <div class="row justify-content-center wow fadeIn">
+        <div class="col-md-6">
           <h1 style="text-align: center;" >Iniciar sesión</h1>
 
           {% get_providers as socialaccount_providers %}
