--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -11,8 +11,8 @@
   <div class="container">
 
     <section class="mb-4">
-      <div class="row wow fadeIn">
-        <div class="col-md-6 offset-3">
+      <div class="row justify-content-center wow fadeIn">
+        <div class="col-md-6">
           <h1>Registrarse</h1>
 
           <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
