--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -16,7 +16,7 @@
     <!--Section: Products v.3-->
     <section class="text-center mb-4">
 
-      <div class="row wow fadeIn">
+      <div class="row justify-content-center wow fadeIn">
         {% for item in object_list %}
         {% if item.stock > 0 %}
           <div class="col-lg-3 col-md-6 mb-4">
